# Reserch

./: .gitignore  0519_mech-newfinger_test_10_20250520_152522.pickle  Diffusion_new.py  Nokov_SDK_Client copy.py  Nokov_SDK_Client.py  add_dataset.py  calibulation_test.py  culc_correlation_coefficient.py  distributed_for_same_value.py  find_same_coordinate_data.py  finger_initial_setting.py  get_data_for_laning_div_new.py  get_data_for_larning.py  get_data_for_larning_div.py  get_data_with_hitting.py  hawtomove20241202_204327.pickle  hawtomove20241204_192404.pickle  inference_at_real_time.py  lowpathfilter.py  magsensor20241128_212013.csv  magsensor20241128_212013.pickle  magsensor20250415_172014.pickle  magsensor20250520_145642.pickle  make_motor_angle.py  marge_and_modify_data_with_hit.py  marge_and_modify_dataset_for_pandas.py  marge_and_modify_dataset_for_pandas_nan.py  marge_data_for_dataset.py  marge_dataset.py  margedata20241128_213014.csv  modeltest.py  modeltest_Diffusion.py  modeltest_GRU.py  modeltest_first.py  modeltest_result_visualization.py  modify_dataset.py  modify_dataset_for_pandas.py  modifydata_test.pickle  motioncapture20241128_212013.csv  motioncapture20241128_212013.pickle  (+34 more)
arxiv/: 0823_CycleAlignedPlotter.py  0823_fingPolter.py  0826_print_real_and_est,.py  0830_print_real_and_est_js.py  0906_print_MDN.py  0909_print_MDN_js.py  tempCodeRunnerFile.py
for_MDPI/: data_comparison_graph.py  data_plot.py  data_plot_all.py  model_gragh.py  sensor_mode_plot.py
for_robomech_graph/: demo.py  modelgraph.py  modelgraph2.py  temp2.py  temp3.py  tempCodeRunnerFile.py
matsuyama/: pyproject.toml
myclass/: MotionCapture2.py  MyBendingSensor.py  MyDynamixel2.py  MyDynamixel3.py  MyDynamixel4.py  MyMagneticSensor.py  MyModel.py  Mydataset.py  Nokov_SDK_Client.py  hawtomove20241129_180934.csv  myfunction.py  tempCodeRunnerFile.py  test20240719_091718.csv  test20240719_092125.csv  test20240719_094356.csv  test20240719_094432.csv
package/: dx2lib.py  dxl.py  motion.py  setting.py
past/: AngletoPWM2.py  PWM.py  demo.py  get_data_for_larning.py  get_data_for_larning_div_safe.py  marge_data_for_dataset.py  practice.py  repeat.py  resnet.py  tempCodeRunnerFile.py
print/: paintgraph.py  paintgraph_1.py  paintgraph_2.py  print_3d_graph.py  print_3d_graph_animation.py  print_bougraph.py  print_data.py  print_diff_xyz.py  print_dosuubnpu.py  print_learning_gosa.py  (+9 more)
(+72 files in other folders)
