[tool.poetry]
name = "matsuyama"
version = "0.1.0"
description = ""
authors = ["weiwei <wanweiwei07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
scipy = "^1.14.1"
torch = { version = "*", source = "torch_cu121" }
torchvision = { version = "*", source = "torch_cu121" }
torchaudio = { version = "*", source = "torch_cu121" }

[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
